// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortBySelector renders markup with state 1`] = `
<ng-ais-sort-by-selector
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-SortBySelector"
  >
    
        
    <ng-ais-header
      classname="ais-SortBySelector-header ais-header"
      ng-reflect-class-name="ais-SortBySelector-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-SortBySelector-body ais-body"
    >
      
          
      <select
        class="ais-SortBySelector-select"
      >
        
            
        
        <option
          class="ais-SortBySelector-option"
          value="foo"
        >
          
              foo
            
        </option>
        <option
          class="ais-SortBySelector-option"
          value="bar"
        >
          
              bar
            
        </option>
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-SortBySelector-footer ais-footer"
      ng-reflect-class-name="ais-SortBySelector-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-sort-by-selector>
`;

exports[`SortBySelector renders markup without state 1`] = `
<ng-ais-sort-by-selector
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-SortBySelector"
  >
    
        
    <ng-ais-header
      classname="ais-SortBySelector-header ais-header"
      ng-reflect-class-name="ais-SortBySelector-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-SortBySelector-body ais-body"
    >
      
          
      <select
        class="ais-SortBySelector-select"
      >
        
            
        
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-SortBySelector-footer ais-footer"
      ng-reflect-class-name="ais-SortBySelector-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-sort-by-selector>
`;
